@@ -96,6 +96,7 @@ libofa_core_la_SOURCES = \
 	ofa-idbms.c											\
 	ofa-iexportable.c									\
 	ofa-ifile-id.c										\
+	ofa-ifile-period.c									\
 	ofa-iimporter.c										\
 	ofa-iimportable.c									\
 	ofa-ipreferences.c									\
